--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -4,6 +4,7 @@
     "mlb": "Toute la MLB",
     "americanLeague": "Ligue Américaine",
     "nationalLeague": "Ligue Nationale",
+    "gamesPlayed": "Matchs Joués",
     "wins": "Victoires",
     "losses": "Défaites",
     "winPercentage": "% Victoires",
