add 2025 to additionnal info title section

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -42,7 +42,7 @@
     "homeVsAway": "Home vs. Away",
     "excludeCovid": "Exclude 2020 (COVID year)",
     "runDifference": "Run Differential",
-    "teamStatistics": "Team Statistics",
+    "teamStatistics": "Team Statistics - 2025",
     "additionalInformation": "Additional Information",
     "division": "Division",
     "divisionRank": "Division Rank",
