--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -42,7 +42,7 @@
     "homeVsAway": "Domicile vs. Visiteur",
     "excludeCovid": "Exclure 2020 (année COVID)",
     "runDifference": "Différence de Points",
-    "teamStatistics": "Statistiques de l'Équipe",
+    "teamStatistics": "Statistiques de l'Équipe - 2025",
     "additionalInformation": "Informations Supplémentaires",
     "division": "Division",
     "divisionRank": "Rang Division",
